terraform/kubernetes/cluster-policies/cilium/cilium-module/sources/sandbox/ccnp-sandbox-allow-kube-apiserver-entity.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ccnp-sandbox-allow-kube-apiserver-entity
  annotations:
    "policies.cilium.io/title": "Sandbox allow kube-apiserver entity"
    "platform.publiccloudexperiments.net/source-kind": "CiliumClusterwideNetworkPolicy"
spec:
  description: >-
    Baseline Kubernetes API allowance for sandbox. Lets sandbox workloads
    reach the Kubernetes API through Cilium's kube-apiserver entity.
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": sandbox
  egress:
    - toEntities:
        - kube-apiserver
